// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Reclaim trapped assets > V4 LIVE > AssetsTrapped event on receiver chain 1`] = `
[
  {
    "data": {
      "assets": {
        "V4": [
          {
            "fun": {
              "Fungible": 1000000000000000,
            },
            "id": {
              "interior": {
                "X2": [
                  {
                    "GlobalConsensus": {
                      "Ethereum": {
                        "chainId": 1,
                      },
                    },
                  },
                  {
                    "AccountKey20": {
                      "key": "0x5d3d01fd6d2ad1169b17918eb4f153c6616288eb",
                      "network": null,
                    },
                  },
                ],
              },
              "parents": 2,
            },
          },
        ],
      },
      "hash_": "(hash)",
      "origin": {
        "interior": {
          "X1": [
            {
              "Parachain": 1000,
            },
          ],
        },
        "parents": 1,
      },
    },
    "method": "AssetsTrapped",
    "section": "polkadotXcm",
  },
]
`;

exports[`Reclaim trapped assets > V4 LIVE > AssetsTrapped event on receiver chain 2`] = `
[
  {
    "data": {
      "assets": {
        "V4": [
          {
            "fun": {
              "Fungible": 1000000000000000,
            },
            "id": {
              "interior": {
                "X2": [
                  {
                    "GlobalConsensus": {
                      "Ethereum": {
                        "chainId": 1,
                      },
                    },
                  },
                  {
                    "AccountKey20": {
                      "key": "0x5d3d01fd6d2ad1169b17918eb4f153c6616288eb",
                      "network": null,
                    },
                  },
                ],
              },
              "parents": 2,
            },
          },
        ],
      },
      "hash_": "(hash)",
      "origin": {
        "interior": {
          "X1": [
            {
              "Parachain": 1000,
            },
          ],
        },
        "parents": 1,
      },
    },
    "method": "AssetsTrapped",
    "section": "polkadotXcm",
  },
]
`;

exports[`Reclaim trapped assets > V4 LIVE > Switch eKILTs sender chain: {"section":"polkadotXcm","method":"Sent"} 1`] = `
[
  {
    "data": {
      "destination": {
        "interior": {
          "X1": [
            {
              "Parachain": "(rounded 2100)",
            },
          ],
        },
        "parents": 1,
      },
      "message": [
        {
          "ReserveAssetDeposited": [
            {
              "fun": {
                "Fungible": 1000000000000000,
              },
              "id": {
                "interior": {
                  "X2": [
                    {
                      "GlobalConsensus": {
                        "Ethereum": {
                          "chainId": 1,
                        },
                      },
                    },
                    {
                      "AccountKey20": {
                        "key": "0x5d3d01fd6d2ad1169b17918eb4f153c6616288eb",
                        "network": null,
                      },
                    },
                  ],
                },
                "parents": 2,
              },
            },
          ],
        },
        "ClearOrigin",
        {
          "BuyExecution": {
            "fees": {
              "fun": {
                "Fungible": 1000000000000000,
              },
              "id": {
                "interior": {
                  "X2": [
                    {
                      "GlobalConsensus": {
                        "Ethereum": {
                          "chainId": 1,
                        },
                      },
                    },
                    {
                      "AccountKey20": {
                        "key": "0x5d3d01fd6d2ad1169b17918eb4f153c6616288eb",
                        "network": null,
                      },
                    },
                  ],
                },
                "parents": 2,
              },
            },
            "weightLimit": "Unlimited",
          },
        },
        {
          "DepositAsset": {
            "assets": {
              "Wild": "All",
            },
            "beneficiary": {
              "interior": {
                "X1": [
                  {
                    "AccountId32": {
                      "id": "(hash)",
                      "network": null,
                    },
                  },
                ],
              },
              "parents": 0,
            },
          },
        },
      ],
      "messageId": "(hash)",
      "origin": {
        "interior": {
          "X1": [
            {
              "AccountId32": {
                "id": "(hash)",
                "network": "Polkadot",
              },
            },
          ],
        },
        "parents": 0,
      },
    },
    "method": "Sent",
    "section": "polkadotXcm",
  },
]
`;

exports[`Reclaim trapped assets > V4 LIVE > Switch eKILTs sender chain: {"section":"polkadotXcm","method":"Sent"} 2`] = `
[
  {
    "data": {
      "destination": {
        "interior": {
          "X1": [
            {
              "Parachain": "(rounded 2100)",
            },
          ],
        },
        "parents": 1,
      },
      "message": [
        {
          "ReserveAssetDeposited": [
            {
              "fun": {
                "Fungible": 1000000000000000,
              },
              "id": {
                "interior": {
                  "X2": [
                    {
                      "GlobalConsensus": {
                        "Ethereum": {
                          "chainId": 1,
                        },
                      },
                    },
                    {
                      "AccountKey20": {
                        "key": "0x5d3d01fd6d2ad1169b17918eb4f153c6616288eb",
                        "network": null,
                      },
                    },
                  ],
                },
                "parents": 2,
              },
            },
          ],
        },
        "ClearOrigin",
        {
          "BuyExecution": {
            "fees": {
              "fun": {
                "Fungible": 1000000000000000,
              },
              "id": {
                "interior": {
                  "X2": [
                    {
                      "GlobalConsensus": {
                        "Ethereum": {
                          "chainId": 1,
                        },
                      },
                    },
                    {
                      "AccountKey20": {
                        "key": "0x5d3d01fd6d2ad1169b17918eb4f153c6616288eb",
                        "network": null,
                      },
                    },
                  ],
                },
                "parents": 2,
              },
            },
            "weightLimit": "Unlimited",
          },
        },
        {
          "DepositAsset": {
            "assets": {
              "Wild": "All",
            },
            "beneficiary": {
              "interior": {
                "X1": [
                  {
                    "AccountId32": {
                      "id": "(hash)",
                      "network": null,
                    },
                  },
                ],
              },
              "parents": 0,
            },
          },
        },
      ],
      "messageId": "(hash)",
      "origin": {
        "interior": {
          "X1": [
            {
              "AccountId32": {
                "id": "(hash)",
                "network": "Polkadot",
              },
            },
          ],
        },
        "parents": 0,
      },
    },
    "method": "Sent",
    "section": "polkadotXcm",
  },
]
`;

exports[`Reclaim trapped assets > V4 LIVE > reclaim trapped assets receiver chain: {"section":"assetSwitchPool1","method":"RemoteToLocalSwitchExecuted"} 1`] = `
[
  {
    "data": {
      "amount": 1000000000000000,
      "to": "4seWojfEHrk5YKPahdErazQ3CWEHZYi6NV4gKz5AaejWbRPJ",
    },
    "method": "RemoteToLocalSwitchExecuted",
    "section": "assetSwitchPool1",
  },
]
`;

exports[`Reclaim trapped assets > V4 LIVE > reclaim trapped assets receiver chain: {"section":"assetSwitchPool1","method":"RemoteToLocalSwitchExecuted"} 2`] = `
[
  {
    "data": {
      "amount": 1000000000000000,
      "to": "4seWojfEHrk5YKPahdErazQ3CWEHZYi6NV4gKz5AaejWbRPJ",
    },
    "method": "RemoteToLocalSwitchExecuted",
    "section": "assetSwitchPool1",
  },
]
`;

exports[`Reclaim trapped assets > V4 LIVE > reclaim trapped assets receiver chain: {"section":"polkadotXcm","method":"AssetsClaimed"} 1`] = `
[
  {
    "data": {
      "assets": {
        "V4": [
          {
            "fun": {
              "Fungible": 1000000000000000,
            },
            "id": {
              "interior": {
                "X2": [
                  {
                    "GlobalConsensus": {
                      "Ethereum": {
                        "chainId": 1,
                      },
                    },
                  },
                  {
                    "AccountKey20": {
                      "key": "0x5d3d01fd6d2ad1169b17918eb4f153c6616288eb",
                      "network": null,
                    },
                  },
                ],
              },
              "parents": 2,
            },
          },
        ],
      },
      "hash_": "(hash)",
      "origin": {
        "interior": {
          "X1": [
            {
              "Parachain": 1000,
            },
          ],
        },
        "parents": 1,
      },
    },
    "method": "AssetsClaimed",
    "section": "polkadotXcm",
  },
]
`;

exports[`Reclaim trapped assets > V4 LIVE > reclaim trapped assets receiver chain: {"section":"polkadotXcm","method":"AssetsClaimed"} 2`] = `
[
  {
    "data": {
      "assets": {
        "V4": [
          {
            "fun": {
              "Fungible": 1000000000000000,
            },
            "id": {
              "interior": {
                "X2": [
                  {
                    "GlobalConsensus": {
                      "Ethereum": {
                        "chainId": 1,
                      },
                    },
                  },
                  {
                    "AccountKey20": {
                      "key": "0x5d3d01fd6d2ad1169b17918eb4f153c6616288eb",
                      "network": null,
                    },
                  },
                ],
              },
              "parents": 2,
            },
          },
        ],
      },
      "hash_": "(hash)",
      "origin": {
        "interior": {
          "X1": [
            {
              "Parachain": 1000,
            },
          ],
        },
        "parents": 1,
      },
    },
    "method": "AssetsClaimed",
    "section": "polkadotXcm",
  },
]
`;

exports[`Reclaim trapped assets > V4 LIVE > reclaim xcm message on relay chain 1`] = `
[
  {
    "data": {
      "destination": {
        "interior": {
          "X1": [
            {
              "Parachain": 1000,
            },
          ],
        },
        "parents": 0,
      },
      "message": [
        {
          "UnpaidExecution": {
            "checkOrigin": null,
            "weightLimit": "Unlimited",
          },
        },
        {
          "Transact": {
            "call": {
              "encoded": "(hash)",
            },
            "originKind": "Superuser",
            "requireWeightAtMost": {
              "proofSize": "(rounded 66000)",
              "refTime": 1000000000,
            },
          },
        },
      ],
      "messageId": "(hash)",
      "origin": {
        "interior": "Here",
        "parents": 0,
      },
    },
    "method": "Sent",
    "section": "xcmPallet",
  },
]
`;

exports[`Reclaim trapped assets > V4 LIVE > reclaim xcm message on relay chain 2`] = `
[
  {
    "data": {
      "destination": {
        "interior": {
          "X1": [
            {
              "Parachain": 1000,
            },
          ],
        },
        "parents": 0,
      },
      "message": [
        {
          "UnpaidExecution": {
            "checkOrigin": null,
            "weightLimit": "Unlimited",
          },
        },
        {
          "Transact": {
            "call": {
              "encoded": "(hash)",
            },
            "originKind": "Superuser",
            "requireWeightAtMost": {
              "proofSize": "(rounded 66000)",
              "refTime": 1000000000,
            },
          },
        },
      ],
      "messageId": "(hash)",
      "origin": {
        "interior": "Here",
        "parents": 0,
      },
    },
    "method": "Sent",
    "section": "xcmPallet",
  },
]
`;

exports[`Reclaim trapped assets > V4 LIVE > reclaim xcm message on sender chain 1`] = `
[
  {
    "data": {
      "destination": {
        "interior": {
          "X1": [
            {
              "Parachain": "(rounded 2100)",
            },
          ],
        },
        "parents": 1,
      },
      "message": [
        {
          "WithdrawAsset": [
            {
              "fun": {
                "Fungible": 1000000000000000,
              },
              "id": {
                "interior": "Here",
                "parents": 0,
              },
            },
          ],
        },
        {
          "BuyExecution": {
            "fees": {
              "fun": {
                "Fungible": 1000000000000000,
              },
              "id": {
                "interior": "Here",
                "parents": 0,
              },
            },
            "weightLimit": "Unlimited",
          },
        },
        {
          "ClaimAsset": {
            "assets": [
              {
                "fun": {
                  "Fungible": 1000000000000000,
                },
                "id": {
                  "interior": {
                    "X2": [
                      {
                        "GlobalConsensus": {
                          "Ethereum": {
                            "chainId": 1,
                          },
                        },
                      },
                      {
                        "AccountKey20": {
                          "key": "0x5d3d01fd6d2ad1169b17918eb4f153c6616288eb",
                          "network": null,
                        },
                      },
                    ],
                  },
                  "parents": 2,
                },
              },
            ],
            "ticket": {
              "interior": {
                "X1": [
                  {
                    "GeneralIndex": 4,
                  },
                ],
              },
              "parents": 0,
            },
          },
        },
        {
          "DepositAsset": {
            "assets": {
              "Wild": "All",
            },
            "beneficiary": {
              "interior": {
                "X1": [
                  {
                    "AccountId32": {
                      "id": "(hash)",
                      "network": null,
                    },
                  },
                ],
              },
              "parents": 0,
            },
          },
        },
      ],
      "messageId": "(hash)",
      "origin": {
        "interior": "Here",
        "parents": 0,
      },
    },
    "method": "Sent",
    "section": "polkadotXcm",
  },
]
`;

exports[`Reclaim trapped assets > V4 LIVE > reclaim xcm message on sender chain 2`] = `
[
  {
    "data": {
      "destination": {
        "interior": {
          "X1": [
            {
              "Parachain": "(rounded 2100)",
            },
          ],
        },
        "parents": 1,
      },
      "message": [
        {
          "WithdrawAsset": [
            {
              "fun": {
                "Fungible": 1000000000000000,
              },
              "id": {
                "interior": "Here",
                "parents": 0,
              },
            },
          ],
        },
        {
          "BuyExecution": {
            "fees": {
              "fun": {
                "Fungible": 1000000000000000,
              },
              "id": {
                "interior": "Here",
                "parents": 0,
              },
            },
            "weightLimit": "Unlimited",
          },
        },
        {
          "ClaimAsset": {
            "assets": [
              {
                "fun": {
                  "Fungible": 1000000000000000,
                },
                "id": {
                  "interior": {
                    "X2": [
                      {
                        "GlobalConsensus": {
                          "Ethereum": {
                            "chainId": 1,
                          },
                        },
                      },
                      {
                        "AccountKey20": {
                          "key": "0x5d3d01fd6d2ad1169b17918eb4f153c6616288eb",
                          "network": null,
                        },
                      },
                    ],
                  },
                  "parents": 2,
                },
              },
            ],
            "ticket": {
              "interior": {
                "X1": [
                  {
                    "GeneralIndex": 4,
                  },
                ],
              },
              "parents": 0,
            },
          },
        },
        {
          "DepositAsset": {
            "assets": {
              "Wild": "All",
            },
            "beneficiary": {
              "interior": {
                "X1": [
                  {
                    "AccountId32": {
                      "id": "(hash)",
                      "network": null,
                    },
                  },
                ],
              },
              "parents": 0,
            },
          },
        },
      ],
      "messageId": "(hash)",
      "origin": {
        "interior": "Here",
        "parents": 0,
      },
    },
    "method": "Sent",
    "section": "polkadotXcm",
  },
]
`;
